--- a/flagfe/public/index.html
+++ b/flagfe/public/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  
   <head>
     <meta charset="utf-8" />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsy77MEkTlGb4SRracsvrhPsLVMEiQb1Q""></script>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
