data communication for search and history order added

--- a/flagfe/public/index.html
+++ b/flagfe/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <script src="https://maps.googleapis.com/maps/api/js?key=your own api key&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCulE3umgID5krrOy6v2nZTnM83Xi0wZdM&libraries=places"></script>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
